syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message ListConfigsByDeviceRequest {
	OpDevice device = 1 [(validator.field) = {msg_exists: true}];
}

message ListConfigsByDeviceResponse {
	repeated Config configs = 1;
}
